# auto_decider

./: README.md
src/: CMakeLists.txt  auto_decider.xml  auto_decider_node.cpp  auto_decider_nodelet.cpp  package.xml
