<?xml version="2.0"?>
<package>
  <name>auto_decider</name>
  <version>0.0.0</version>
  <description>The auto_decider package</description>
  <maintainer email="mohammad@todo.todo">mohammad</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  <nodelet plugin="${prefix}/auto_decider.xml"/>
  </export>
</package>
